--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -338,6 +338,9 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha declarado el elemen
 > Los elementos vacíos no pueden tener contenido, pero sí pueden tener atributos.
 {:.prompt-info}
 
+{:.question}
+¿Puede un elemento vacío tener atributos?
+
 **Un elemento puede definirse para contener contenido mixto - ANY**
 
 EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `persona` puede contener texto y otros elementos, es decir, contenido mixto, `ANY`:
@@ -452,6 +455,23 @@ EJEMPLO Aunque un elemento se declare vacío, no pudiendo contener texto ni otro
 ```
 
 En este ejemplo, para el elemento `br` se ha declarado el atributo `descripcion` de tipo `CDATA` (Character DATA), es decir, su valor puede ser una cadena de caracteres. Además, se ha indicado que el atributo es obligatorio escribirlo, `#REQUIRED`.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Por qué en los elementos usamos el tipo "(#PCDATA)" y en los atributos usamos el tipo "CDATA" si ambos se refieren a una cadena de texto?</summary>
+  <div class="card-body" markdown="1">
+
+- `PCDATA` es un texto que será analizado por un analizador.
+- `CDATA` es un texto que no ser analizado por un analizador.
+
+Pero... ¿Qué quiere decir esto?
+
+El `#PCDATA` El modelo de contenido dice que un elemento puede contener texto sin formato. **La parte "analizada" significa que el marcado (incluidos los PI, los comentarios y las directivas SGML) que contiene se analiza en lugar de mostrarse como texto en bruto.** También significa que se sustituyen las referencias a entidades.
+
+Otro tipo de modelo de contenido que permite contenidos de texto plano es `CDATA` . En xml, el modelo de contenido de los elementos no puede establecerse implícitamente en `CDATA` pero en SGML, **significa que las referencias a marcas y entidades se ignoran en el contenido del elemento**. En los atributos de `CDATA` sin embargo, se sustituyen las referencias a las entidades.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Elementos con cualquier contenido - ANY
@@ -1001,6 +1021,16 @@ Respecto a los otros tipos de declaración de atributos (`#REQUIRED`, `#IMPLIED`
 - Atributo obligatorio - `#REQUIRED`
 - Atributo opcional - `#IMPLIED`
 - Atributo con valor fijo - `#FIXED valor`
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Puedo declarar un elemento como opcional dentro de la definición del propio elemento?</summary>
+  <div class="card-body" markdown="1">
+
+No.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Atributo obligatorio - #REQUIRED
@@ -1559,7 +1589,7 @@ No obstante, tal y como está declarado el atributo `xml:space` del elemento `pr
 {:.section}
 ## Declaración de entidades
 
-En una DTD se pueden declarar entidades generales y paramétricas (de parámetro). 
+En una DTD se pueden declarar entidades generales y paramétricas (de parámetro).
 
 Las entidades generales pueden ser:
 
@@ -1576,6 +1606,30 @@ Las entidades generales pueden utilizarse en el cuerpo de un documento XML y en 
 
 {:.question}
 ¿Qué diferencia hay entre una entidad general y una entidad paramétrica?
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre una entidad externa y una entidad interna?
+</summary>
+  <div class="card-body" markdown="1">
+
+Las entidades externas son entidades cuyo valor está en un fichero diferente del propio XML.
+
+Las entidades internas son entidades cuyo valor está en el propio fichero XML.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre una entidad analizable y una entidad NO analizable?
+</summary>
+  <div class="card-body" markdown="1">
+
+Analizable significa que puede ser internamente por el analizador de XML. Por ejemplo en el caso de una imagen en formato PNG, el contenido de la imagen no lo podemos analizar con un DTD, es decir, no podemos saber nada de cómo es la imagen desde el documento XML.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Entidades generales internas analizables
@@ -1679,8 +1733,16 @@ EJEMPLO Para declarar `escritor` como entidad general externa analizable públic
 </textos>
 ```
 
-{:.question}
-¿Qué diferencia hay entre una entidad pública y privada?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre una entidad pública (PUBLIC) y una entidad privada (SYSTEM)?
+</summary>
+  <div class="card-body" markdown="1">
+
+Ambas deben ser entidades generales externas analizables, pero la entidad privada hace referencia a un recurso privado mientras que la entidad pública hace referencia a un recurso público accesible a través de Internet.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Entidades generales externas no analizables
@@ -2289,3 +2351,4 @@ EJEMPLO En la DTD interna del siguiente documento se han escrito dos comentarios
 - <https://www.abrirllave.com/dtd/como-validar-con-xml-copy-editor-un-documento-xml-asociado-a-una-dtd.php>
 - <https://jorgesanchez.net/manuales/xml/xml-validacion.html>
 - <https://www.w3schools.com/xml/xml_dtd_intro.asp>
+- <https://www.iteramos.com/pregunta/34968/diferencia-entre-pcdata-y-cdata-en-la-dtd>
