--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -88,42 +88,43 @@ Duración: - h
 
 Descarga [enunciado_tarea_xsd.zip](/assets/img/tarea-xsd/enunciado_tarea_xsd.zip) y realiza las siguientes actividades.
 
-NO hay que entregar ningún documento PDF contestando a las preguntas.
+> Recuerda que NO hay que entregar ningún documento PDF contestando a las preguntas.
+{:.prompt-info}
 
 {:.activity}
 ### (Voluntaria) Validar un documento XML
 
-Comprobar con Visual Studio Code o XML Copy Editor que "a01_validarMarcadores.xml" es válido haciendo uso de "a01_validarMarcadores.xsd".
+Comprobar con Visual Studio Code o XML Copy Editor que `a01_validarMarcadores.xml`{: .filepath} es válido haciendo uso de `a01_validarMarcadores.xsd`{: .filepath}.
 
 {:.activity}
 ### (Voluntaria) Validar un sitemap XML
 
-Comprobar con un validador online de sitemaps XML que "a02_validarSitemap.xml" es válido.
+Comprobar con un validador online de sitemaps XML que `a02_validarSitemap.xml`{: .filepath} es válido.
 
 {:.activity}
 ### Mensaje entre personas
 
-Dado el siguiente archivo "a03_mensaje.xsd". Corregir los errores cometidos en el documento XML "a03_mensaje.xml", para que sea válido. Para ello, no modificar la cuarta línea de código de "a03_mensaje.xml".
+Dado el siguiente archivo `a03_mensaje.xsd`{: .filepath}. Corregir los errores cometidos en el documento XML `a03_mensaje.xml`{: .filepath}, para que sea válido. Para ello, no modificar la cuarta línea de código de `a03_mensaje.xml`{: .filepath}.
 
 {:.activity}
 ### Definición de elementos simples
 
-Para los elementos del "a04_definicionElementosSimples.xml.txt" escribir sus definiciones de elementos simples correspondientes en "a04_definicionElementosSimples.xsd.txt".
+Para los elementos del `a04_definicionElementosSimples.xml.txt`{: .filepath} escribir sus definiciones de elementos simples correspondientes en `a04_definicionElementosSimples.xsd.txt`{: .filepath}.
 
 {:.activity}
 ### Puerta cerrada y ventana abierta
 
-Definir en "a05_puertaCerradaVentanaAbierta.xsd.txt" un elemento llamado `puertaCerrada` de tipo lógico, que por defecto tenga el valor "falso", y otro elemento llamado `ventanaAbierta` también de tipo lógico, que tenga asignado el valor fijo "verdadero".
+Definir en `a05_puertaCerradaVentanaAbierta.xsd.txt`{: .filepath} un elemento llamado `puertaCerrada` de tipo lógico, que por defecto tenga el valor "falso", y otro elemento llamado `ventanaAbierta` también de tipo lógico, que tenga asignado el valor fijo "verdadero".
 
 {:.activity}
 ### Fichas de personas
 
-Dado el documento XML "a06_fichas.xml" escribir el contenido del archivo "a06_fichas.xsd" que permita validarlo.
+Dado el documento XML `a06_fichas.xml`{: .filepath} escribir el contenido del archivo `a06_fichas.xsd`{: .filepath} que permita validarlo.
 
 {:.activity}
 ### Edad entre 0 y 130 años
 
-Dado el documento XML "a07_edad.xml" escribir el contenido del archivo "a07_edad.xsd" que permita validarlo, teniendo en cuenta que se debe definir la "edad" con la restricción de que el valor que tome no pueda ser menor que 0 ni mayor que 130. Además, en vez de `xs:minInclusive` y `xs:maxInclusive`, se debe utilizar:
+Dado el documento XML `a07_edad.xml`{: .filepath} escribir el contenido del archivo `a07_edad.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que se debe definir la "edad" con la restricción de que el valor que tome no pueda ser menor que 0 ni mayor que 130. Además, en vez de `xs:minInclusive` y `xs:maxInclusive`, se debe utilizar:
 
 - `xs:minExclusive` que sirve para especificar que el valor debe ser mayor que el indicado.
 - `xs:maxExclusive` que sirve para especificar que el valor debe ser menor que el indicado.
@@ -131,7 +132,7 @@ Dado el documento XML "a07_edad.xml" escribir el contenido del archivo "a07_edad
 {:.activity}
 ### Precios de tres dígitos
 
-Dado el documento XML "a08_precios.xml" escribir el contenido del archivo "a08_precios.xsd" que permita validarlo, teniendo en cuenta que el elemento "precio" puede tomar por valor un número que contenga tres dígitos como máximo y, de ellos, solamente dos pueden ser decimales. Para ello, escribir una restricción que no podrá ser utilizada por otros elementos y, por otra parte, haga uso de:
+Dado el documento XML `a08_precios.xml`{: .filepath} escribir el contenido del archivo `a08_precios.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento "precio" puede tomar por valor un número que contenga tres dígitos como máximo y, de ellos, solamente dos pueden ser decimales. Para ello, escribir una restricción que no podrá ser utilizada por otros elementos y, por otra parte, haga uso de:
 
 - `xs:totalDigits` que sirve para especificar el número máximo de dígitos que puede tener un número, incluyendo a los decimales.
 - `xs:fractionDigits` que sirve para especificar el número máximo de decimales que puede tener un número.
@@ -139,17 +140,17 @@ Dado el documento XML "a08_precios.xml" escribir el contenido del archivo "a08_p
 {:.activity}
 ### Tipo de vehículo
 
-Dada la definición de "a09_vehiculo.xsd.txt" escribe otro modo de definir el elemento "vehiculo" y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barco", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
+Dada la definición de `a09_vehiculo.xsd.txt`{: .filepath} escribe otro modo de definir el elemento "vehiculo" y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barco", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
 
 {:.activity}
 ### Iniciales de personas famosas
 
-Dado el archivo "a10_iniciales.xsd" corregir los errores cometidos en "a10_iniciales.xml" para que sea válido.
+Dado el archivo `a10_iniciales.xsd`{: .filepath} corregir los errores cometidos en `a10_iniciales.xml`{: .filepath} para que sea válido.
 
 {:.activity}
 ### Iniciales al revés
 
-Realizar los cambios necesarios en "a11_inicialesAlReves.xsd", para que "a11_inicialesAlReves.xml" sea válido.
+Realizar los cambios necesarios en `a11_inicialesAlReves.xsd`{: .filepath}, para que `a11_inicialesAlReves.xml`{: .filepath} sea válido.
 
 > Hay que tener en cuenta que el elemento `iniciales-al-reves` debe ser del mismo tipo que `iniciales`, y dicho tipo solamente deberá definirse una vez.
 {:.prompt-info}
@@ -160,7 +161,7 @@ Si se quisiera permitir que las tres letras de iniciales e `iniciales-al-reves`,
 {:.activity}
 ### Respuestas admitidas
 
-En "a12_respuestasAdmitidas.xsd.txt" se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C", "D" o "E". Escribe otra forma de especificar la misma restricción.
+En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C", "D" o "E". Escribe otra forma de especificar la misma restricción.
 
 {:.question}
 Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mismo que lo expresado con `<xs:pattern value="[ABCDE]"/>`?
@@ -168,7 +169,7 @@ Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mis
 {:.activity}
 ### Números y letras
 
-Escribir el contenido del archivo "a13_numerosYLetras.xsd" que permita validar "a13_numerosYLetras.xml", teniendo en cuenta que:
+Escribir el contenido del archivo `a13_numerosYLetras.xsd`{: .filepath} que permita validar `a13_numerosYLetras.xml`{: .filepath}, teniendo en cuenta que:
 
 - Tanto el atributo `numero` como el elemento "código" utilizan la misma restricción que solamente les permite tomar un valor entero expresado con dos dígitos comprendidos entre "00" y "19".
 - El atributo `letra` puede tomar por valor una de las siguientes letras: "X", "Y" o "Z". - La restricción debe definirse de forma que solamente pueda ser utilizada por dicho atributo.
@@ -193,7 +194,7 @@ En las expresiones regulares se pueden utilizar –entre otros– los siguientes
 | `x{n,m}`            | `x` debe aparecer entre `n` y `m` veces.                         |
 | `x{n,}`             | `x` debe aparecer al menos `n` veces.                          |
 
-Teniendo en cuenta, solamente, los símbolos mostrados en la tabla anterior, escribir en "a14_expresionesRegulares.txt" las posibles expresiones regulares que permitan representar los siguientes valores:
+Teniendo en cuenta, solamente, los símbolos mostrados en la tabla anterior, escribir en `a14_expresionesRegulares.txt`{: .filepath} las posibles expresiones regulares que permitan representar los siguientes valores:
 
 1. "Capítulo 0", "Capítulo 1", "Capítulo 2"... "Capítulo 9". (Solo se permite un dígito).
 1. "Capítulo 0", "Capítulo 1", "Capítulo 2"... "Capítulo 99". (Uno o dos dígitos).
@@ -204,12 +205,12 @@ Teniendo en cuenta, solamente, los símbolos mostrados en la tabla anterior, esc
 1. El primer carácter debe ser "R". A continuación, deben aparecer obligatoriamente dos o más "S". Finalmente, puede aparecer o no, un dígito del 3 al 8: "RSS", "RSSS"... "RSS3"... "RSS8", "RSSS3"... "RSSS8"... "RSSSSSSSSSSS7"...
 1. Cualquier valor que contenga en primer lugar "COD", después tres dígitos (0-9) y, finalmente, uno o más caracteres cualesquiera: "COD645pera", "COD646manzana"...
 
-Dado el documento XML "a14_expresionesRegulares.xml" escribir el contenido del archivo "a14_expresionesRegulares.xsd" que permita validarlo utilizando las expresiones regulares escritas en este ejercicio.
+Dado el documento XML `a14_expresionesRegulares.xml`{: .filepath} escribir el contenido del archivo `a14_expresionesRegulares.xsd`{: .filepath} que permita validarlo utilizando las expresiones regulares escritas en este ejercicio.
 
 {:.activity}
 ### Letras admitidas
 
-En "a15_letrasAdmitidas.xsd.txt" se define un elemento llamado "letras" con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
+En `a15_letrasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "letras" con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
 
 > Nota: los paréntesis de la expresión regular se pueden omitir, escribiendo simplemente: `[a-z]*`
 {:.prompt-info}
@@ -219,12 +220,12 @@ Realizar los cambios necesarios en el código del ejemplo anterior para que "let
 {:.activity}
 ### Longitud fija de una clave
 
-En "a16_longintudFija.xsd.txt" definir un elemento "clave" que pueda tomar por valor exactamente diez caracteres, los cuales podrán ser letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". Por ejemplo, serán válidos los valores siguientes: "abcde12345", "Clave55ABC", "1A2b3c4D5f", etc.
+En `a16_longintudFija.xsd.txt`{: .filepath} definir un elemento "clave" que pueda tomar por valor exactamente diez caracteres, los cuales podrán ser letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". Por ejemplo, serán válidos los valores siguientes: "abcde12345", "Clave55ABC", "1A2b3c4D5f", etc.
 
 {:.activity}
 ### Longitud mínima y máxima de una clave
 
-Dado el documento "a17_longitudMinMax.xml" escribir el contenido del archivo "a17_longitudMinMax.xsd" que permita validarlo, teniendo en cuenta que el elemento "clave" debe poder tomar por valor un mínimo de cuatro caracteres y un máximo de diez. Dichos caracteres pueden ser indistintamente letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". La restricción solamente podrá aplicarse al elemento "clave".
+Dado el documento `a17_longitudMinMax.xml`{: .filepath} escribir el contenido del archivo `a17_longitudMinMax.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento "clave" debe poder tomar por valor un mínimo de cuatro caracteres y un máximo de diez. Dichos caracteres pueden ser indistintamente letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". La restricción solamente podrá aplicarse al elemento "clave".
 
 Para ello, se debe utilizar `xs:pattern` y también:
 
@@ -234,17 +235,17 @@ Para ello, se debe utilizar `xs:pattern` y también:
 {:.activity}
 ### Información de persona ampliada
 
-Dado el archivo "a18_infoPersona.xsd" añadir la definición de un nuevo elemento `complexType` llamado "infoPersonaAmpliada2" que amplíe la definición de "infoPersonaAmpliada", permitiendo validar el documento "a18_infoPersona.xml".
+Dado el archivo `a18_infoPersona.xsd`{: .filepath} añadir la definición de un nuevo elemento `complexType` llamado "infoPersonaAmpliada2" que amplíe la definición de "infoPersonaAmpliada", permitiendo validar el documento `a18_infoPersona.xml`{: .filepath}.
 
 {:.activity}
 ### Precios de artículos
 
-Realizar los cambios necesarios en el archivo "a19_preciosArticulos.xsd" para que permita validar el documento XML "a19_preciosArticulos.xml".
+Realizar los cambios necesarios en el archivo `a19_preciosArticulos.xsd`{: .filepath} para que permita validar el documento XML `a19_preciosArticulos.xml`{: .filepath}.
 
 {:.activity}
 ### Información de ubicaciones
 
-Añadir, al archivo "a20_infoUbicaciones.xsd", la definición de un nuevo elemento `complexType` llamado "infoUbicacion" que amplíe la definición de "direccion", permitiendo validar el documento "a20_infoUbicaciones.xml".
+Añadir, al archivo `a20_infoUbicaciones.xsd`{: .filepath}, la definición de un nuevo elemento `complexType` llamado "infoUbicacion" que amplíe la definición de "direccion", permitiendo validar el documento `a20_infoUbicaciones.xml`{: .filepath}.
 
 {:.activity}
 ### Colores de muebles
@@ -278,19 +279,19 @@ Haciendo uso del siguiente código:
 </xs:simpleType>
 ```
 
-Escribir el contenido del archivo "a21_coloresMuebles.xsd" que permita validar el documento "a21_coloresMuebles.xml".
+Escribir el contenido del archivo `a21_coloresMuebles.xsd`{: .filepath} que permita validar el documento `a21_coloresMuebles.xml`{: .filepath}.
 
 {:.activity}
 ### Números del bingo
 
-Escribir el código de un documento XML en "a22_numerosBingo.xml" que pueda ser validado por "a22_numerosBingo.xsd" y almacene los números 17, 23 y 65.
+Escribir el código de un documento XML en `a22_numerosBingo.xml`{: .filepath} que pueda ser validado por `a22_numerosBingo.xsd`{: .filepath} y almacene los números 17, 23 y 65.
 
 - `xs:positiveInteger` es un tipo de dato predefinido derivado, que admite números enteros positivos mayores que cero.
 
 {:.activity}
 ### Información de personas en contenido mixto
 
-Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un documento XML ("a23_infoPersonasMixto.xml") que pueda ser validado por "a23_infoPersonasMixto.xsd" y que almacene la siguiente información:
+Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un documento XML (`a23_infoPersonasMixto.xml`{: .filepath}) que pueda ser validado por `a23_infoPersonasMixto.xsd`{: .filepath} y que almacene la siguiente información:
 
 - "Eva vive en París y tiene 25 años."
 - "Giovani vive en Florencia y tiene 25 años."
@@ -298,14 +299,14 @@ Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un 
 {:.activity}
 ### Panel de vuelos
 
-Se ha escrito el documento XML "a24_panelVuelos.xml" para representar la siguiente información ficticia:
+Se ha escrito el documento XML `a24_panelVuelos.xml`{: .filepath} para representar la siguiente información ficticia:
 
 | Código | Diario | Origen   | Destino | Hora salida | Hora llegada | Estado |
 |--------|--------|----------|---------|-------------|--------------|--------|
 | V22    | SI     | New York | Chicago | 9:30        | 11:30        | R      |
 | V23    | NO     | New York | Miami   | 10:15       | 11:15        | C      |
 
-Escribir el código del archivo "a24_panelVuelos.xsd" que permita validarlo, teniendo en cuenta que:
+Escribir el código del archivo `a24_panelVuelos.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
 - No debe utilizarse ni `group` ni `attributeGroup`.
 - El `nombre` del aeropuerto, los `vuelos` y la `fecha` pueden aparecer en distinto orden.
@@ -318,7 +319,7 @@ Escribir el código del archivo "a24_panelVuelos.xsd" que permita validarlo, ten
 {:.activity}
 ### Factura
 
-Se ha escrito el documento XML "a25_factura.xml" para representar la información contenida en la siguiente factura ficticia:
+Se ha escrito el documento XML `a25_factura.xml`{: .filepath} para representar la información contenida en la siguiente factura ficticia:
 
 FACTURA NÚMERO 27 – FECHA: 18/12/2013:
 
@@ -336,7 +337,7 @@ Detalle de la factura:
 | CP5             | Varios   | Curso de HTML     | 2        | NO     | 40€ |
 | IMPORTE:        |       |                   |          |        | 95€ |
 
-Escribir el código del archivo "a25_factura.xsd" que permita validarlo, teniendo en cuenta que:
+Escribir el código del archivo `a25_factura.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
 - Exceptuando los elementos `datos-emisor`, `datos-cliente` y `detalle-factura`, que no tienen porqué aparecer en este orden, el resto de elementos representados en el documento XML, sí deben escribirse obligatoriamente en el orden en el que aparecen.
 - Excepto para los hijos directos del elemento `factura`, siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe usar `group` o `attributeGroup`, respectivamente.
@@ -357,7 +358,7 @@ Escribir el código del archivo "a25_factura.xsd" que permita validarlo, teniend
 {:.activity}
 ### Registro de conexiones
 
-Se ha escrito el  documento XML "a26_registroConexiones.xml" para representar la siguiente información ficticia:
+Se ha escrito el  documento XML `a26_registroConexiones.xml`{: .filepath} para representar la siguiente información ficticia:
 
 REGISTRO DE CONEXIONES DE USUARIOS Y EMPLEADOS DE UNA EMPRESA
 
@@ -374,7 +375,7 @@ EMPLEADOS:
 |---------------------------------------------------|--------------------------------|
 | `E4&Marta&Vera Gil&mvera@yajoo.es&Marketing`        | `(Ninguna)`                      |
 
-Escribir el código del archivo "a26_registroConexiones.xsd" que permita validarlo, teniendo en cuenta que:
+Escribir el código del archivo `a26_registroConexiones.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
 - Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
 - Siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe utilizar `group` o `attributeGroup`, respectivamente.
@@ -391,12 +392,12 @@ Escribir el código del archivo "a26_registroConexiones.xsd" que permita validar
 {:.activity}
 ### (Voluntaria) Personal de departamentos
 
-Se ha escrito el documento "a27_personalDepartamentos.xml" para representar la siguiente información ficticia:
+Se ha escrito el documento `a27_personalDepartamentos.xml`{: .filepath} para representar la siguiente información ficticia:
 
 ![Información del personal de los departamentos](tablaPersonalDepartamentos.png)
 _Información del personal de los departamentos_
 
-Escribir el código del archivo "a27_personalDepartamentos.xsd" que permita validarlo, teniendo en cuenta que:
+Escribir el código del archivo `a27_personalDepartamentos.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
 - Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
 - Los elementos `datos-generales` y `datos-departamentos` pueden aparecer indistintamente uno antes que el otro.
