--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -48,7 +48,10 @@ mruizg_t09.zip
 │
 ├───mruizg_a05_vuelos.xml
 ├───mruizg_a06_factura.xml
-└───mruizg_a07_liga.xml
+└───mruizg_a07_liga/
+    ├───01.xml
+    ├───02.xml
+    └───03.xml
 ```
 
 ## Calificación
