--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -48,11 +48,14 @@ mruizg_t09.zip
 │
 ├───mruizg_a05_vuelos.xml
 ├───mruizg_a06_factura.xml
-└───mruizg_a07_liga/
+└───mruizg_a07_liga
     ├───01.xml
     ├───02.xml
     └───03.xml
 ```
+
+> El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
+{:.prompt-info}
 
 ## Calificación
 
