--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -65,6 +65,9 @@ mruizg_t10.zip
 └───mruizg_a27_personalDepartamentos.xsd
 ```
 
+> El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
+{:.prompt-info}
+
 <details class="card mb-2">
   <summary class="card-header question">¿Por qué hay ficheros .xml.txt?</summary>
   <div class="card-body" markdown="1">
