--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -164,7 +164,7 @@ Si se quisiera permitir que las tres letras de iniciales e `iniciales-al-reves`,
 {:.activity}
 ### Respuestas admitidas
 
-En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C", "D" o "E". Escribe otra forma de especificar la misma restricción.
+En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C" o "D". Escribe otra forma de especificar la misma restricción.
 
 {:.question}
 Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mismo que lo expresado con `<xs:pattern value="[ABCDE]"/>`?
@@ -175,7 +175,7 @@ Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mis
 Escribir el contenido del archivo `a13_numerosYLetras.xsd`{: .filepath} que permita validar `a13_numerosYLetras.xml`{: .filepath}, teniendo en cuenta que:
 
 - Tanto el atributo `numero` como el elemento "código" utilizan la misma restricción que solamente les permite tomar un valor entero expresado con dos dígitos comprendidos entre "00" y "19".
-- El atributo `letra` puede tomar por valor una de las siguientes letras: "X", "Y" o "Z". - La restricción debe definirse de forma que solamente pueda ser utilizada por dicho atributo.
+- El atributo `letra` puede tomar por valor una de las siguientes letras: "Y" o "Z". - La restricción debe definirse de forma que solamente pueda ser utilizada por dicho atributo.
 - Para cada ficha se tiene que indicar un número, obligatoriamente. Sin embargo, la letra es opcional.
 
 {:.activity}
@@ -265,7 +265,7 @@ Haciendo uso del siguiente código:
             <xs:enumeration value="blanco" />
             <xs:enumeration value="gris" />
             <xs:enumeration value="negro" />
-            <xs:enumeration value="wengue" />
+            <xs:enumeration value="azul" />
           </xs:restriction>
         </xs:simpleType>
       </xs:attribute>
@@ -306,7 +306,7 @@ Se ha escrito el documento XML `a24_panelVuelos.xml`{: .filepath} para represent
 
 | Código | Diario | Origen   | Destino | Hora salida | Hora llegada | Estado |
 |--------|--------|----------|---------|-------------|--------------|--------|
-| V22    | SI     | New York | Chicago | 9:30        | 11:30        | R      |
+| V22    | SI     | New York | Chicago | 9:35        | 11:35        | R      |
 | V23    | NO     | New York | Miami   | 10:15       | 11:15        | C      |
 
 Escribir el código del archivo `a24_panelVuelos.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
@@ -328,7 +328,7 @@ FACTURA NÚMERO 27 – FECHA: 18/12/2013:
 
 | DATOS EMISOR:       | DATOS CLIENTE:      |
 |---------------------|---------------------|
-| Librería Pérez      | Biblioteca Txantrea |
+| Librería García     | Biblioteca Txantrea |
 | CIF: 44555666B      | CIF: 33111222A      |
 | Teléfono: 777888999 | Teléfono: 333999444 |
 
@@ -342,7 +342,7 @@ Detalle de la factura:
 
 Escribir el código del archivo `a25_factura.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
-- Exceptuando los elementos `datos-emisor`, `datos-cliente` y `detalle-factura`, que no tienen porqué aparecer en este orden, el resto de elementos representados en el documento XML, sí deben escribirse obligatoriamente en el orden en el que aparecen.
+- Exceptuando los elementos `datosEmisor`, `datosCliente` y `detalleFactura`, que no tienen porqué aparecer en este orden, el resto de elementos representados en el documento XML, sí deben escribirse obligatoriamente en el orden en el que aparecen.
 - Excepto para los hijos directos del elemento `factura`, siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe usar `group` o `attributeGroup`, respectivamente.
 - Respecto al número de la `factura` (que debe ser un valor entero mayor que 0) y su `fecha` de emisión (de tipo `xs:date`), hay que indicar que son atributos obligatorios.
 - El atributo `moneda` debe indicarse que es un valor fijo.
@@ -383,9 +383,9 @@ Escribir el código del archivo `a26_registroConexiones.xsd`{: .filepath} que pe
 - Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
 - Siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe utilizar `group` o `attributeGroup`, respectivamente.
 - Pueden aparecer de cero a ilimitados `usuarios` y, a continuación, de cero a ilimitados `empleados`.
-- `Usuario` debe ser de un tipo definido por nosotros al que llamaremos `tipoPersona`, donde hay que definir los elementos `apellidos-y-nombre`, `email` y `conexiones`. Por otro lado, empleado ha de ser de otro tipo llamado `tipoPersonaAmpliado`, definido como una extensión de `tipoPersona` añadiéndole el elemento `departamento`. El orden en que tienen que aparecer los elementos hijo de `usuario` y `empleado`, debe ser obligatoriamente el escrito en el documento XML.
+- `Usuario` debe ser de un tipo definido por nosotros al que llamaremos `tipoPersona`, donde hay que definir los elementos `apellidosYNombre`, `email` y `conexiones`. Por otro lado, empleado ha de ser de otro tipo llamado `tipoPersonaAmpliado`, definido como una extensión de `tipoPersona` añadiéndole el elemento `departamento`. El orden en que tienen que aparecer los elementos hijo de `usuario` y `empleado`, debe ser obligatoriamente el escrito en el documento XML.
 - El valor del `identificador` debe ser una cadena formada por una letra "U" o "E" mayúscula, seguida de uno a cinco dígitos del 0 al 9.
-- El valor del elemento `apellidos-y-nombre` debe ser una cadena de entre 1 a 30 caracteres (de la "a" a la "z", mayúsculas o minúsculas, o el carácter espacio en blanco) para los apellidos, seguida del carácter coma "," y de entre 1 a otras 20 letras (de la "a" a la "z", también mayúsculas o minúsculas, o el carácter espacio en blanco) para el nombre.
+- El valor del elemento `apellidosYNombre` debe ser una cadena de entre 1 a 30 caracteres (de la "a" a la "z", mayúsculas o minúsculas, o el carácter espacio en blanco) para los apellidos, seguida del carácter coma "," y de entre 1 a otras 20 letras (de la "a" a la "z", también mayúsculas o minúsculas, o el carácter espacio en blanco) para el nombre.
 - El valor del email puede ser una cadena formada por 1 a 15 caracteres de la "a" a la "z", seguida del carácter "@", seguido de entre 1 a otras 25 letras de la "a" a la "z", seguidas del carácter punto "." y de entre otras 2 a 4 letras de la "a" a la "z".
 - De cada usuario y empleado se reflejan sus `conexiones`, indicando para cada `conexión` la cantidad de segundos que duró, que debe ser un número entero mayor que cero. Hay que tener en cuenta que, como se puede ver en el documento XML, pueden aparecer desde cero hasta ilimitados elementos `conexión`.
 - Respecto a los atributos `fecha` y `hora`, cada uno de ellos debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
@@ -403,21 +403,21 @@ _Información del personal de los departamentos_
 Escribir el código del archivo `a27_personalDepartamentos.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
 - Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
-- Los elementos `datos-generales` y `datos-departamentos` pueden aparecer indistintamente uno antes que el otro.
-- Excepto para los hijos directos de los elementos `personal`, `datos-generales` y `departamento`, siempre que sea
+- Los elementos `datosGenerales` y `datosDepartamentos` pueden aparecer indistintamente uno antes que el otro.
+- Excepto para los hijos directos de los elementos `personal`, `datosGenerales` y `departamento`, siempre que sea
 posible agrupar al menos dos elementos o dos atributos, se debe utilizar `group` o `attributeGroup`.
-- Los datos generales de la empresa deben ser de un tipo definido por nosotros al que llamaremos `tipoDatosGenerales`, donde hay que definir los elementos `nombre-empresa`, `número-trabajadores` (que debe ser un valor entero mayor que 0) y `sector`. Estos elementos deben escribirse en dicho orden en el documento XML.
+- Los datos generales de la empresa deben ser de un tipo definido por nosotros al que llamaremos `tipoDatosGenerales`, donde hay que definir los elementos `nombreEmpresa`, `númeroTrabajadores` (que debe ser un valor entero mayor que 0) y `sector`. Estos elementos deben escribirse en dicho orden en el documento XML.
 - El atributo `fecha` debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
 - El atributo `multinacional` indica si la empresa lo es, o no, con un valor lógico.
 - El atributo `moneda` debe indicarse que es un valor fijo. Pero, no es obligatorio.
-- El elemento `nombre-empresa` y el elemento `nombre-y-apellidos` de los trabajadores, deben ser del mismo tipo, al
+- El elemento `nombreEmpresa` y el elemento `nombreYApellidos` de los trabajadores, deben ser del mismo tipo, al
 que llamaremos `tipoTexto`, y donde debe indicarse que los valores admitidos para dichos elementos pueden ser cadenas de un mínimo de 1 carácter y un máximo de 40.
 - Los posibles `sectores` son `educación`, `finanzas` o `tecnología`. De tal forma que, sólo uno de ellos debe escribirse en el archivo XML mediante un elemento vacío, como en este caso se ha escrito `<tecnología />`.
 - Se tiene que indicar que el `código` de cada departamento ha de ser único.
 - Sin hacer uso `pattern` indicar que los posibles `nombres` de `departamento` son `Administración`, `Informática`,
 `Marketing` o `Recursos humanos`, no permitiéndose otro valor. Para ello, se debe definir un tipo de dato llamado
 `tipoDepartamento`, que debe poder ser utilizado por otros atributos o elementos.
-- `Empleado` (en cada departamento puede haber de 0 a 3) debe ser de un tipo definido por nosotros al que llamaremos `tipoEmpleado`, donde hay que definir los posibles valores que pueden tener los elementos `nombre-y-apellidos`, `baja` y `salario` (que deberán escribirse en ese orden en el documento XML). Por otro lado, jefe (obligatoriamente habrá 1 por departamento) ha de ser de otro tipo llamado `tipoJefe`, definido como una extensión de tipoEmpleado añadiéndole el elemento clave.
+- `Empleado` (en cada departamento puede haber de 0 a 3) debe ser de un tipo definido por nosotros al que llamaremos `tipoEmpleado`, donde hay que definir los posibles valores que pueden tener los elementos `nombreYApellidos`, `baja` y `salario` (que deberán escribirse en ese orden en el documento XML). Por otro lado, jefe (obligatoriamente habrá 1 por departamento) ha de ser de otro tipo llamado `tipoJefe`, definido como una extensión de tipoEmpleado añadiéndole el elemento clave.
 - De cada `departamento` (pueden haber de 1 a ilimitados), primero debe escribirse el `jefe` y, después, los
 `empleados` que hubiese.
 - Para indicar si un trabajador está de `baja`, se debe utilizar un elemento vacío, que podrá aparecer (en el caso de
