--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -113,6 +113,9 @@ En el atributo `schemaLocation` se pueden escribir parejas de valores:
 - En el primer valor de cada pareja, hay que hacer referencia a un espacio de nombres.
 - En el segundo valor, se tiene que indicar la ubicación de un archivo donde hay un esquema de ese espacio de nombres.
 
+{:.question}
+¿Es `http://www.w3.org/2001/XMLSchema-instance` una referencia a un XSD? ¿Debería serlo?
+
 En cuanto al archivo `marcadores.xsd`{: .filepath}, ahora su código podría ser:
 
 ```xml
@@ -142,6 +145,77 @@ elementFormDefault="qualified">
 - En el atributo `targetNamespace` se está indicando que los elementos definidos en este esquema (`marcadores`, `página`, `nombre`, `descripción` y `url`), provienen del espacio de nombres `http://www.abrirllave.com/marcadores`.
 - `xmlns="http://www.abrirllave.com/marcadores"` especifica que este es el espacio de nombres por defecto.
 - El atributo `elementFormDefault="qualified"` indica que todos los elementos declarados localmente en el esquema tienen que estar calificados, es decir, tienen que pertenecer a un espacio de nombres. Por esta razón, en `marcadores.xml`{: .filepath} se han escrito con el prefijo `mar`.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es un espacio de nombres?</summary>
+  <div class="card-body" markdown="1">
+
+Un espacio de nombres XML es una colección de nombres, identificados mediante una referencia de URI que se utiliza en documentos XML como tipos de elementos y nombres de atributos.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Es `http://www.w3.org/2001/XMLSchema` es un XSD?</summary>
+  <div class="card-body" markdown="1">
+
+Si.
+
+{:.question}
+¿Debería serlo?
+
+No necesariamente.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">En el documento anterior, ¿hay un espacio de nombres por defecto?</summary>
+  <div class="card-body" markdown="1">
+
+Si. El que no hemos "bautizado".
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">En el documento anterior, ¿Con cuantos espacios de nombres estamos trabajando al mismo tiempo? ¿Por qué?
+</summary>
+  <div class="card-body" markdown="1">
+
+Usamos 2 espacios de nombres:
+
+- `http://www.w3.org/2001/XMLSchema` que define el vocabulario de nuestro documento XSD.
+- `http://www.abrirllave.com/marcadores` que define el vocabulario que estamos creando.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué atributo es obligatorio para el elemento schema? ¿Dónde puedo saber eso?</summary>
+  <div class="card-body" markdown="1">
+
+El único atributo obligatorio es xmlns. Lo puedo saber leyendo el XSD zhttp://www.w3.org/2001/XMLSchema>.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header">Si no sabes responder a las preguntas anteriores o no entiendes las respuestas...</summary>
+  <div class="card-body" markdown="1">
+
+Mira este vídeo donde se explican los espacios de nombres y para qué sirven y como se utilizan los atributos: `xmlns`, `targetNamespace` y `schemaLocation`:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TzPFCv8h-48?si=OBuCeDJl7bL83FGf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Elementos globales y locales en XSD
