--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -157,13 +157,10 @@ Un espacio de nombres XML es una colección de nombres, identificados mediante u
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Es `http://www.w3.org/2001/XMLSchema` es un XSD?</summary>
+  <summary class="card-header question">¿Es http://www.w3.org/2001/XMLSchema un XSD? ¿Debería serlo?</summary>
   <div class="card-body" markdown="1">
 
 Si.
-
-{:.question}
-¿Debería serlo?
 
 No necesariamente.
 
@@ -199,7 +196,14 @@ Usamos 2 espacios de nombres:
   <summary class="card-header question">¿Qué atributo es obligatorio para el elemento schema? ¿Dónde puedo saber eso?</summary>
   <div class="card-body" markdown="1">
 
-El único atributo obligatorio es xmlns. Lo puedo saber leyendo el XSD zhttp://www.w3.org/2001/XMLSchema>.
+El único atributo obligatorio es xmlns.
+
+Lo puedo saber de varias formas:
+
+- Leyendo este artículo de teoría.
+- Leyendo el [XML Schema Tutorial de W3Schools](https://www.w3schools.com/xml/schema_intro.asp).
+- Leyendo el DTD que nos proporciona W3C <http://www.w3.org/2001/XMLSchema>.
+- Leyendo el XSD que nos proporciona W3C <https://www.w3.org/2009/XMLSchema/XMLSchema.xsd>.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -213,9 +217,13 @@ Mira este vídeo donde se explican los espacios de nombres y para qué sirven y 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/TzPFCv8h-48?si=OBuCeDJl7bL83FGf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+> ¡OJO! A la hora de etiquetar elementos que están dentro de un espacio de nombres en un XML es IMPRESCINDIBLE tener en cuenta si el atributo `elementFormDefault` es `qualified` o `unqualified` y saber diferenciar entre elementos globales y locales.
+{:.prompt-info}
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
+
 
 {:.subsection}
 ### Elementos globales y locales en XSD
@@ -965,3 +973,4 @@ Se puede escribir el siguiente código en el archivo `personas.xsd`{: .filepath}
 - <https://www.abrirllave.com/xsd/apuntes-de-xsd.php>
 - <https://jorgesanchez.net/manuales/xml/xml-validacion.html>
 - <https://www.w3schools.com/xml/schema_intro.asp>
+- <https://www.ibm.com/docs/es/integration-designer/8.5.5?topic=projects-namespaces>
