--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -107,7 +107,12 @@ Comprobar con un validador online de sitemaps XML que `a02_validarSitemap.xml`{:
 {:.activity}
 ### Mensaje entre personas
 
-Dado el siguiente archivo `a03_mensaje.xsd`{: .filepath}. Corregir los errores cometidos en el documento XML `a03_mensaje.xml`{: .filepath}, para que sea válido. Para ello, no modificar la cuarta línea de código de `a03_mensaje.xml`{: .filepath}.
+Dado el siguiente archivo `a03_mensaje.xsd`{: .filepath}. Corregir los errores cometidos en el documento XML `a03_mensaje.xml`{: .filepath}, para que sea válido. Para ello, no modificar la cuarta línea de código de `a03_mensaje.xml`{: .filepath}:
+
+```xml
+  xmlns:men="marcosruiz.github.io/assets/img/tarea-xsd">
+```
+{: .nolineno }
 
 {:.activity}
 ### Definición de elementos simples
