--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -160,11 +160,11 @@ Dado el archivo `a10_iniciales.xsd`{: .filepath} corregir los errores cometidos 
 
 Realizar los cambios necesarios en `a11_inicialesAlReves.xsd`{: .filepath}, para que `a11_inicialesAlReves.xml`{: .filepath} sea válido.
 
-> Hay que tener en cuenta que el elemento `iniciales-al-reves` debe ser del mismo tipo que `iniciales`, y dicho tipo solamente deberá definirse una vez.
+> Hay que tener en cuenta que el elemento `inicialesAlReves` debe ser del mismo tipo que `iniciales`, y dicho tipo solamente deberá definirse una vez.
 {:.prompt-info}
 
 {:.question}
-Si se quisiera permitir que las tres letras de iniciales e `iniciales-al-reves`, sean minúsculas o mayúsculas indistintamente; en lugar de `[A-Z][A-Z][A-Z]` ¿qué se podría escribir?
+Si se quisiera permitir que las tres letras de iniciales e `inicialesAlReves`, sean minúsculas o mayúsculas indistintamente; en lugar de `[A-Z][A-Z][A-Z]` ¿qué se podría escribir?
 
 {:.activity}
 ### Respuestas admitidas
@@ -172,7 +172,7 @@ Si se quisiera permitir que las tres letras de iniciales e `iniciales-al-reves`,
 En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C" o "D". Escribe otra forma de especificar la misma restricción.
 
 {:.question}
-Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mismo que lo expresado con `<xs:pattern value="[ABCDE]"/>`?
+Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mismo que lo expresado con `<xs:pattern value="[ABCD]"/>`?
 
 {:.activity}
 ### Números y letras
@@ -220,7 +220,7 @@ Dado el documento XML `a14_expresionesRegulares.xml`{: .filepath} escribir el co
 
 En `a15_letrasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "letras" con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
 
-> Nota: los paréntesis de la expresión regular se pueden omitir, escribiendo simplemente: `[a-z]*`
+> Los paréntesis de la expresión regular se pueden omitir, escribiendo simplemente: `[a-z]*`
 {:.prompt-info}
 
 Realizar los cambios necesarios en el código del ejemplo anterior para que "letras" pueda tomar por valor uno o más pares (+) de letras, y cada par de letras deberá estar formado por una letra mayúscula seguida de otra minúscula. Por ejemplo, "HoLa" sería admitido, pero no lo sería "Hola", "HOLa", "hola", etc.
@@ -294,7 +294,8 @@ Escribir el contenido del archivo `a21_coloresMuebles.xsd`{: .filepath} que perm
 
 Escribir el código de un documento XML en `a22_numerosBingo.xml`{: .filepath} que pueda ser validado por `a22_numerosBingo.xsd`{: .filepath} y almacene los números 17, 23 y 65.
 
-- `xs:positiveInteger` es un tipo de dato predefinido derivado, que admite números enteros positivos mayores que cero.
+> `xs:positiveInteger` es un tipo de dato predefinido derivado, que admite números enteros positivos mayores que cero.
+{:.prompt-info}
 
 {:.activity}
 ### Información de personas en contenido mixto
@@ -322,7 +323,7 @@ Escribir el código del archivo `a24_panelVuelos.xsd`{: .filepath} que permita v
 - Haciendo uso `pattern` indicar que los posibles estados de un vuelo son `C` (Cancelado), `E` (En hora), `R` (Retrasado). Dicha restricción sólo debe poder ser utilizada por el atributo `estado`. El valor por defecto debe ser `E`.
 - Debe permitirse aparecer desde cero hasta ilimitados elementos `vuelo` y, para cada uno de ellos, se tiene que guardar la información en el mismo orden en el que aparece en el panel.
 - Para indicar si un vuelo es `diario`, se debe utilizar un elemento vacío que, respecto a cada vuelo, podrá aparecer (en el caso de sí ser diario) o no aparecer (en el caso contrario).
-- Respecto a los elementos `nombre`, `origen`, `destino`, `hora-llegada`, `hora-salida` y `fecha`, cada uno de ellos debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
+- Respecto a los elementos `nombre`, `origen`, `destino`, `horaLlegada`, `horaSalida` y `fecha`, cada uno de ellos debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
 
 {:.activity}
 ### Factura
